--- a/my-website/package.json
+++ b/my-website/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.2.0",
     "react-jss": "^10.6.0",
     "react-router-dom": "^5.2.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "4.0.3",
     "react-transition-group": "^4.4.1",
     "web-vitals": "^1.1.2"
